# PointCloud_Classification_using_ML

./: README.md
Data_Preprocessing/Data_Augmentation/: CMakeLists.txt  data_aug.c  data_aug.h  data_aug.py  data_aug.pyx  data_augmentation.cpp  test_data_aug.cpp
Data_Preprocessing/KITTI2PCD/: CMakeLists.txt  kitti2pcd.cpp
Data_Preprocessing/Rename/: rename.py
Feature_Engineering/: CMakeLists.txt  README.md
Feature_Engineering/dataset_example/: car1.pcd  car742.pcd  pedestrian0.pcd
Feature_Engineering/lib/: CMakeLists.txt  accessFile.cpp  accessFile.h  commonHeadFiles.h  extractFeature.h  getFeatureVector.cpp  getFeatureVector.h  get_file_name.pyx  searchKdtree.h
Feature_Engineering/src/: CMakeLists.txt  analyseFeature.cpp  estimate_mutual_info.py  testModule.cpp
Test/: basic_test_randomforest.py  basic_test_svm.py  basic_test_xgb.py  noise_test_rf.py  noise_test_svm.py  noise_test_xgb.py  occlusion_test_rf.py  occlusion_test_svm.py  occlusion_test_xgb.py  sparsity_test_rf.py  sparsity_test_svm.py  sparsity_test_xgb.py  test.py
Test/robust_test_data_features/: CMakeLists.txt
Test/robust_test_data_features/lib/: CMakeLists.txt  extractFeature.cpp  gen_robust_test_data.cpp  gen_robust_test_data.h  getFeatureVector.cpp  getFeatureVector.h  get_file_name.c  get_file_name.h  sampleCloud.cpp  sampleCloud.h  searchKdtree.cpp
Test/robust_test_data_features/src/: CMakeLists.txt  noise.cpp  occlusion.cpp  sparsity.cpp
Training/: rf.pkl  svm.pkl  svm.py  train_randomforest.py  train_svm.py  train_xgb.py  xgb.pkl
